# boilerplates-latex_doc

./: .gitignore  README.md  main.tex  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
bibliography/: references.bib
chapters/: chapter01.tex
notebooks/: teste.ipynb
styles/: doc_style.sty
tex_reports/: main.tex
